--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,26 +30,18 @@ android {
     }
 
     packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.md'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/NOTICE'
         exclude 'META-INF/NOTICE.md'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/ASL2.0'
-        exclude("META-INF/*.kotlin_module")
     }
 }
 
 dependencies {
     implementation 'com.google.android.material:material:1.3.0'
-    // https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime
+
+    implementation group: 'org.jpmml', name: 'pmml-evaluator', version: '1.5.15'
+    implementation group: 'org.jpmml', name: 'pmml-model-jackson', version: '1.5.15'
     implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.1'
-    // https://mvnrepository.com/artifact/org.jpmml/pmml-evaluator-metro
-    implementation group: 'org.jpmml', name: 'pmml-evaluator-metro', version: '1.5.14'
+    implementation group: 'xerces', name: 'xercesImpl', version: '2.12.0'
 
     implementation 'com.android.support:multidex:1.0.3'
 
