--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
 
 dependencies {
     implementation 'com.google.android.material:material:1.3.0'
-
+    implementation 'com.android.volley:volley:1.2.0'
     implementation group: 'org.jpmml', name: 'pmml-evaluator', version: '1.5.15'
     implementation group: 'org.jpmml', name: 'pmml-model-jackson', version: '1.5.15'
     implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.1'
