--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.JokeChair">
 
-
+        <activity android:name=".HistoryActivity"/>
         <activity android:name=".PostureActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
